@@ -1,5 +1,12 @@
 # vim: set noexpandtab:
 
+2012-09-19 Steve
+	* Added d3pd tag to SusyD3PDAna: m_d3pdTag
+	* Added metFlavor to SusyD3PDAna: m_metFlavor
+	* Filling passMllForAlpgen flag using MultiLep/TruthTools
+	* Filling ptcone30ElStyle
+	* Added command line options to NtMaker: --d3pd1032, --metFlav
+
 2012-09-18 Steve
 	* Added RecoTruthMatch tool, filling isChargeFlip flag
 		* Not yet using the reclassification, because at the 
